--- a/Open_translater/templates/index.html
+++ b/Open_translater/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Open_trans</title>
+    <title>Open_translater</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 
 <div class="navbar">
         <img src="{{ url_for('static', filename='images/title_logo.png') }}" alt="로고">
-        <h1 class="site-title">Open_trans</h1>
+        <h1 class="site-title">Open_translater</h1>
     </div>
 
 <div class="container">
